kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-operations/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &name home-operations-runner
spec:
  endpointSelector:
    matchLabels:
      runner: *name
  enableDefaultDeny:
    egress: false
  egressDeny:
    - toCIDRSet:
        - cidr: 10.0.0.0/8
          except:
          - 10.10.99.0/24
          - 10.43.0.0/16
    - toCIDR:
        - 172.16.0.0/12
        - 192.168.0.0/16
